<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_pattern_demo</name>
  <version>0.0.1</version>
  <description>state_pattern_demo</description>
  <maintainer email="robohase01@gmail.com">tygoto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
